--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
         <h1>Milson W Sylvain | WDD 130</h1>
         <img src="images/ms.jpg" alt="Hello, my name is Mils W Sylvain" width="200">
         <p>Hello My name is Mils W Sylvain and I am From Port au Prince, Haiti. 
-            <br>my hobbies are riding bikes, draw in my computer, and watch sports
-        <br>like basketball, soccer in my free times, I really like this course <br>
-        and I cant wait to get it done</p>
+        my hobbies are riding bikes, draw in my computer, and watch sports
+        like basketball, soccer in my free times, I really like this course and I can't wait to get this course done</p>
     </main>
     <footer>
         <p>©2024 🌴 Mils W Sylvain 🌴 Phx, Az</p>
