--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <a href="w1/index.html">1st Realization</a>
       <a href="about/index.html">About Me Page</a>             
-      <a href="wwr/index.html">White Water Rafting Website</a>
+      <a href="wwr/about.html">White Water Rafting Website</a>
     </nav>  
     <p>Milson Sylvain - WDD130</p>
     <P>for the smoke mountain 2024 project</P>   
