--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>WDD130 Web Projects</h1>
     <nav>
       <a href="w1/index.html">1st Realization</a>
+      <a href="graphic.html">MS Graph</a>
       <a href="about/index.html">About Me Page</a>             
       <a href="wwr/about.html">White Water Rafting Website</a>
     </nav>  
