--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,14 +25,14 @@
     </header>
 
     <!-- Main Content Section -->
-    <main>
-        <section class="hero">
-            <h1>Smoky Mountains in christmas</h1>
-            <div class="hero-content">
-                <p>Pigeon Forge & Gatlinburg is a great place to visit for Christmas. The Great Smoky Mountains truly come alive with Christmas cheer and there is always joy in the air. See the city adorned with gorgeous lights and have a blast at the amazing holiday-themed shows and attractions. See awesome Christmas shows or even take an unforgettable journey on the Polar Express. Enjoy several terrific Christmas Shows on your vacation and create new, memorable Christmas traditions with the ones that you love.</p>
-                <img src="images/mas.jpeg" alt="smoky mt">
-            </div>
-        </section>
+    <div class="hero">
+        <img src="images/hero1.jpg" alt="rafting img">
+        <h1>White Water Rafting</h1>
+        <article>
+            <img src="images/mas.jpeg" alt="smoking mountnain">
+            <p><p>Pigeon Forge & Gatlinburg is a great place to visit for Christmas. The Great Smoky Mountains truly come alive with Christmas cheer and there is always joy in the air. See the city adorned with gorgeous lights and have a blast at the amazing holiday-themed shows and attractions. See awesome Christmas shows or even take an unforgettable journey on the Polar Express. Enjoy several terrific Christmas Shows on your vacation and create new, memorable Christmas traditions with the ones that you love.</p>
+        </article>
+    </div>
 
         <section class="history">
             <h2>History</h2>
